fix: home illustration overflow

--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -4,7 +4,7 @@
   }
 
   .Home>.RowContainer>.Illustration {
-    width: 375px !important;
+    width: 90% !important;
   }
 
   .Home>.RowContainer>.ColumnContainer {
